--- a/_data/2020/los_angeles/participants.yml
+++ b/_data/2020/los_angeles/participants.yml
@@ -1,6 +1,6 @@
 
 - name: Margarita Boyarskaya
-  image: /assets/images/Margarita_Boyskaya_UCLA.jpeg
+  image: /assets/images/Margarita_Boyarskaya_UCLA.jpeg
   bio: "Margarita Boyarskaya is a PhD student at NYU Stern Technology, Operations, and Statistics group working on causal models for algorithmic fairness. She holds a B.Sc. and a M.Sc. in theoretical mathematics from Moscow State University. Previously, Margarita was an intern with the FATE group at Microsoft Research."
 
 - name: Tania Cabello-Hutt
@@ -28,11 +28,11 @@
   bio: "Hannah Hertenstein is a doctoral student in the school of sociology at the University of California, Irvine. Her research interests are in education inequality, school choice, and organizational ecology. Before coming to UC Irvine, she conducted research projects that involved geospatial analysis of school closures in Arizona. Hannah received her BA in sociology at the University of Arizona in 2019."
 
 - name: Cybele Kappos
-  image: /assets/images/Cybele_Kappos_UCLA.jpg
+  image: /assets/images/Cybele_Kappos_UCLA.JPG
   bio: "Cybele Kappos is a Ph.D. student in Political Science at UCLA. Her research broadly focuses on democracy in the European Union. She is interested in disentangling how national interests and actors interact with the unique, supranational structure of the EU. She hopes to synthesize several different methodologies in her work including text analysis and supervised machine learning to understand the nuances of political discourse."
 
 - name: Benji Kaveladze
-  image: /assets/images/Benji_Kaveladze_UCLA.jpg
+  image: /assets/images/Benji_ Kaveladze_UCLA.jpg
   bio: "Benji Kaveladze is a PhD student in Psychological Science at UC Irvine. He studies online mental health support communities, aiming to learn how to improve user experiences on these spaces."
 
 - name: Hye Min Kim
@@ -64,7 +64,7 @@
   bio: "Jieun is a Ph.D. student in political science at UCLA. Prior to UCLA, she was a profession researcher at Korea National Diplomatic Academy and Association of World Election Bodies. She completed a masters in International Relations at Seoul National University and a Bachelor degree in International Relations at Australian National University. Her research explores populism and anti-immigration sentiment. She is particularly interested in studying xenophobia/anti-immigration sentiment in Asian countries and the attitudes toward racial minorities in Western countries. Her ongoing project examines the causes of the attitudinal changes toward Asian immigrants in the US and Australia by analyzing survey results and text data of news coverage. She has published her work in Romanian Journal of Electoral Studies and presented at various conferences including MPSA, WPSA, and IPSA."
 
 - name: Nripsuta Ani Saxena
-  image: /assets/images/Ani_Saxena_UCLA.jpg
+  image: /assets/images/Ani_Saxena_UCLA.JPG
   bio: "I am a PhD student in Computer Science at the University of Southern California. My research interests are, broadly, fairness in machine learning, AI for Social Good, and questions at the intersection of psychology and CS."
 
 - name: Gilad Wenig
