--- a/_data/2020/tucson/schedule.yml
+++ b/_data/2020/tucson/schedule.yml
@@ -1,3 +1,27 @@
 - date: 2021-01-03
+  name: "Welcome"
   events:
-    - name: "Schedule coming soon..."
+
+- date: 2021-01-04
+  name: "Introduction and Ethics"
+  events:
+
+- date: 2021-01-05
+  name: "Experiments"
+  events:
+
+- date: 2021-01-06
+  name: "Digital Traces"
+  events:
+
+- date: 2021-01-07
+  name: "Social Networks and Agent-Based Models"
+  events:
+
+- date: 2021-01-08
+  name: "Machine Learning and Text"
+  events:
+
+- date: 2021-01-09
+  name: "Geographic Information Systems"
+  events:
