--- a/_data/2020/tucson/speakers.yml
+++ b/_data/2020/tucson/speakers.yml
@@ -14,7 +14,7 @@
   website: https://sgpp.arizona.edu/people/frank-gonzalez
   
 - name: Robert Henderson
-  image: /assets/images/henderson_cropped.jpg.JPG
+  image: /assets/images/henderson_cropped.jpg
   bio: "My research is in formal semantics with a special focus on the indigenous languages of Mesoamerica, languages on which I have done many years of fieldwork. I am particularly excited about using tools from the natural language processing world to speed the annotation, documentation, and description of endangered languages."
   website: https://linguistics.arizona.edu/user/robert-henderson
   
@@ -24,7 +24,7 @@
   website: https://sgpp.arizona.edu/people/javier-osorio
 
 - name: Samara Klar
-  image: /assets/images/Samara_Klar.JPG
+  image: /assets/images/Samara_Klar.jpg
   bio: "Samara Klar is an Associate Professor of Political Science at the University of Arizona School of Government & Public Policy. Dr. Klar studies why voters support policies and candidates, especially given the influence of their personal and social identities, their social networks, and their information environments. Her award-winning book, Independent Politics: How American Disdain Leads to Political Inaction (Cambridge University Press 2016), explains why so many Americans identify as politically independent and what the consequences are for American democracy."
   website: http://samaraklar.com/
   
