--- a/_data/2020/tucson/speakers.yml
+++ b/_data/2020/tucson/speakers.yml
@@ -34,6 +34,6 @@
   website: https://geography.arizona.edu/people/fernando-sanchez
   
 - name: Lisa Sanchez
-  image: /assets/images/LisaSanchez.jpg
+  image: /assets/images/LisaSanchez.jpeg
   bio: "Lisa M. Sanchez is an assistant professor in the School of Government and Public Policy at the University of Arizona. She holds a master’s degree in American politics and public policy and a doctorate in political science with distinction from the University of New Mexico. She is an alumnus of the APSA Minority Fellows program and the Robert Wood Johnson Center for Health Policy. Her research utilizes quantitative methodologies to root out ethno-racial disparities in American politics, understand how disparities are perpetuated through the American political system, and address how they might be mitigated. As a result, her research spans many specialties within the field of American politics including Congressional politics, public policy (health and immigration), identity politics, state politics, political identity, and political participation. Recent projects analyze the adoption of beneficial immigration policies in the American states, the prevalence of cross-racial linked fate among Americans of all racial and ethnic backgrounds, and the relationship between a rising U.S. Latino population and its electoral impacts within the U.S. Congress."
   website: https://sgpp.arizona.edu/people/lisa-sanchez
