--- a/_data/2020/tucson/location.yml
+++ b/_data/2020/tucson/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/tucson2.jpg
 title: Tucson
-subtitle: Tucson, Arizona
+subtitle: Virtual event
 description: "January 4 to January 9, 2021"
 link: tucson
 year: 2020
