adding text to missing bios for parsing.

--- a/_data/2018/boulder/participants.yaml
+++ b/_data/2018/boulder/participants.yaml
@@ -25,7 +25,7 @@
 
 - name: Pavel Goldstein
   image: 
-  bio: 
+  bio: no bio.
   website: https://www.colorado.edu/ics/pavel-goldstein
 
 - name: Jordan Hale
@@ -55,7 +55,7 @@
 
 - name: Anais Landry
   image: 
-  bio: 
+  bio: no bio.
   website: 
 
 - name: Stefani Langehennig
@@ -90,7 +90,7 @@
 
 - name: Marie Ouellet
   image: 
-  bio: 
+  bio: no bio.
   website: 
 
 - name: Anthony Pinter
