fixing missing info

--- a/_data/2018/capetown/participants.yml
+++ b/_data/2018/capetown/participants.yml
@@ -39,6 +39,7 @@
   website:
 
 - name: Hailu Debere
+  bio: no bio.
 
 - name:  Robert Y. Djogbenou
   image: /2018/capetown/images/Djogbenou.jpg
@@ -46,6 +47,7 @@
   website:
 
 - name: Judith Donang
+  bio: no bio.
 
 - name: Ahmed Eldud 
   image: /2018/capetown/images/Eldud.jpg
@@ -58,6 +60,7 @@
   website:   
 
 - name: Mbongeni Hlabano
+  bio: no bio.
 
 - name: Bunakiye Japheth
   image: /2018/capetown/images/Japheth.jpg
@@ -65,6 +68,7 @@
   website: 
 
 - name: Benson John
+  bio: no bio.
 
 - name: Takwanisa Machemedze 
   image: /2018/capetown/images/Machemedze.jpg
