--- a/_data/2020/tucson/schedule.yml
+++ b/_data/2020/tucson/schedule.yml
@@ -1,10 +1,15 @@
 - date: All times are in Mountain Time
 
+- date: 2021-01-03
+  name: "Welcome Event"
+  events:
+    - name: "4:00 - 5:00 Meet-and-greet"
+
 - date: 2021-01-04
-  name: "Welcome and Ethics"
+  name: "Introduction and Ethics"
   events:
     - name: "10:00 - 11:00 Introduction to computational social science"
-    - name: "11:00 - 12:00 Meet-n-greet"
+    - name: "11:00 - 12:00 Inclusivity in CSS w/ [Lisa Sanchez](https://sgpp.arizona.edu/people/lisa-sanchez)"
     - name: "12:00 - 12:30 Break"
     - name: "12:30 - 2:30 Ethics in CSS w/ [Annie Boustead](https://sgpp.arizona.edu/people/anne-boustead)"
     - name: "2:30 - 3:30 Research roundtable"
