--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         ruby-version: '2.7'
 
-    - name: Install properly version of bundler
+    - name: Install proper version of bundler
       run: gem install bundler -v 2.1.4
 
     - uses: actions/cache@v2
