--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -10,7 +10,7 @@
   body: "We provide an open-source, modular curriculum for state of the art training that can be used online or in the classroom."
   image: /assets/images/learning.jpg
   cta: "Find Resources"
-  link: "curriculum"
+  link: "overview"
 
 - title: Host a Location
   subtitle: "Partner with SICSS"
