--- a/_data/2020/tucson/schedule.yml
+++ b/_data/2020/tucson/schedule.yml
@@ -27,7 +27,7 @@
 - date: 2021-01-06
   name: "Digital Traces: APIs and Web Scraping"
   events:
-    - name: "10:00 - 11:00 Digital traces and consturct validity w/ [Yotam Shmargad](http://www.yotamshmargad.com/)"
+    - name: "10:00 - 11:00 Digital traces and construct validity w/ [Yotam Shmargad](http://www.yotamshmargad.com/)"
     - name: "11:00 - 12:00 Social media APIs w/ [Yotam Shmargad](http://www.yotamshmargad.com/)"
     - name: "12:00 - 12:30 Break"
     - name: "12:30 - 2:30 Scraping the web w/ [Thomas Davidson](https://www.thomasrdavidson.com/)"
