--- a/_data/2021/princeton/location.yml
+++ b/_data/2021/princeton/location.yml
@@ -2,6 +2,5 @@ image: /assets/images/princeton.jpg
 title: Princeton University *Coming Soon*
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
-link: Princeton
+link: princeton
 year: 2021
-apply_button:
