run on schedule

--- a/.github/workflows/people-search.yml
+++ b/.github/workflows/people-search.yml
@@ -1,8 +1,7 @@
 name: People search updates
 on:
-  push:
-    branches:
-      - people-search
+  schedule:
+    - cron: '40 * * * *'
 jobs:
   build:
 
