--- a/_data/2021/princeton/location.yml
+++ b/_data/2021/princeton/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/princeton.jpg
-title: Princeton University *Coming Soon*
+title: Princeton University
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: princeton
