Update sidebar for consistency

--- a/_data/2021/princeton/sidebar.yml
+++ b/_data/2021/princeton/sidebar.yml
@@ -1,6 +1,6 @@
-- name: "Apply"
+- name: Apply
   url: "apply"
-- name: "Pre-arrival"
+- name: Pre-arrival
   url: "pre_arrival"
 - name: People
   url: "people"
