--- a/_data/2021/fgv-dapp-brazil/hero.yml
+++ b/_data/2021/fgv-dapp-brazil/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 14 to June 26, 2021 | Department of Public Policy Analysis of Getulio Vargas Foundation | Virtual event"
-location: "SICSS-FGV/DAPP Brazil *Coming Soon*"
+header_2: "June 14 to June 26, 2021 | FGV/DAPP | Virtual event *Coming Soon*"
+location: "SICSS-FGV/DAPP Brazil"
