update directory names

--- a/_data/2021/los_angeles/location.yml
+++ b/_data/2021/los_angeles/location.yml
@@ -2,5 +2,5 @@ image: /assets/images/los_angeles.jpg
 title: UCLA *Coming Soon*
 subtitle: Virtual event
 description: "September 7 to September 22, 2021"
-link: ucla
+link: los_angeles
 year: 2021
