--- a/_data/2021/ethzurich/location.yml
+++ b/_data/2021/ethzurich/location.yml
@@ -2,5 +2,5 @@ image: /assets/images/zurich.jpg
 title: Zürich *Coming Soon*
 subtitle: Virtual event
 description: "June 14 to June 18, 2021"
-link: zurich
+link: ethzurich
 year: 2021
