--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -1,9 +1,9 @@
 - date: All times are local Istanbul Time and All program will be Zoom-based.
 
-- date: "Pre-SICSS Period: Tasks and Dinner Talks"
+- date: "Pre-SICSS Period: Tasks and Coffee Talks"
   events:
     - name: "**[Pre-SICSS Tasks](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/istanbul/pre-SICSS%20tasks.md)**<br/>Theory and practise rarely meet in the real world. Therefore instead of writing tutorials which are long, fancy and full with nice codes, we are going to suggest three introductory guides and two abstract case studies, and provide guidance every week till SICSS via zoom and Slack. The tasks cover data collection, cleaning and reporting. We are leaving the analysis to SICSS weeks."
-    - name: "**Dinner Talks**<br/> While working Pre-SICSS tasks, informal small group dinner talks will be organized to share our experiences, discuss on project ideas, talk about SICSS materials, and chat on participant's questions."
+    - name: "**Coffee Talks**<br/> While working Pre-SICSS tasks, informal small group coffee talks will be organized to share our experiences, discuss on project ideas, talk about SICSS materials, and chat on participant's questions."
 
 - date: 2021-06-01
   events:
