--- a/_data/2021/istanbul/people.yml
+++ b/_data/2021/istanbul/people.yml
@@ -8,7 +8,7 @@ organizers:
        website: https://www.akinunver.org/
 
      - name: Yunus Emre Tapan
-       image: /assets/images/YEmreTapan.jpg
+       image: /assets/images/YEmreTapan.JPG
        bio: "Yunus Emre Tapan is currently doing his Ph.D. in International Relations at Kadir Has University. He gained his Master's degree in Middle East Studies from Middle Eastern Technical University and his Bachelor's degree in Economics from Bogazici University. His research interests are at the intersection between data science and social sciences. He is employing both social network analysis and computational text analysis methods to study online communities and non-state actors with a particular focus on radicalization and extremism. He participated in the ICPSR (Inter-university Consortium for Political and Social Research) Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research. He presented his works at IC2S2(International Conference on Computational Social Science), PaCSS & PolNet (Politics and Computational Social Science and Political Networks Conference), and ECPR (European Consortium for Political Research). He took multiple roles in the international conferences and workshops conducted by NATO, the U.N., and the Ministry of Foreign Affairs in Turkey as a rapporteur, a focal point, an invited participant, and a discussant."
        website:
 
