Fix syntax errors in yaml file

--- a/_data/2020/tucson/participants.yml
+++ b/_data/2020/tucson/participants.yml
@@ -39,7 +39,7 @@
 
 - name: Christina Gahn
   image: /assets/images/christinagahn.jpeg
-  bio: ""Christina Gahn is a pre-doctoral research fellow at the chair of comparative politics at Humboldt-Universität zu Berlin. Also, she is a PhD student at the Berlin Graduate School of Social Sciences. Before, she studied political science and worked at the University of Vienna. Christina was a research assistant for the Austrian National Election Study (AUTNES) and teaching assistant for comparative politics and quantitative methods. Christina's research interests include political parties and party competition, electoral campaigns and political communication with a focus on quantitative methods. Her dissertation project is about targeting issue messages in electoral campaigns in Europe.""
+  bio: "Christina Gahn is a pre-doctoral research fellow at the chair of comparative politics at Humboldt-Universität zu Berlin. Also, she is a PhD student at the Berlin Graduate School of Social Sciences. Before, she studied political science and worked at the University of Vienna. Christina was a research assistant for the Austrian National Election Study (AUTNES) and teaching assistant for comparative politics and quantitative methods. Christina's research interests include political parties and party competition, electoral campaigns and political communication with a focus on quantitative methods. Her dissertation project is about targeting issue messages in electoral campaigns in Europe."
   website: https://christina.gahn.at
 
 - name: Dana Guy
@@ -108,7 +108,7 @@
 
 - name: Liron Lavi
   image: /assets/images/lironlavi.JPG
-  bio: "Liron Lavi is a research fellow at the University of California, Los Angeles, studying elections and democracy, political representation, and collective identity in Israel and the United States. Her research focuses on how the changing landscape of "old" and "new" media shapes the democratic role of elections. She uses qualitative, quantitative, and computational methods, including discourse analysis, statistical models, and natural language processing. "
+  bio: Liron Lavi is a research fellow at the University of California, Los Angeles, studying elections and democracy, political representation, and collective identity in Israel and the United States. Her research focuses on how the changing landscape of "old" and "new" media shapes the democratic role of elections. She uses qualitative, quantitative, and computational methods, including discourse analysis, statistical models, and natural language processing.
   website: www.liron-lavi.com
 
 - name: Lucas Borba
