--- a/_data/2021/rutgers/faculty.yml
+++ b/_data/2021/rutgers/faculty.yml
@@ -1,1 +1,19 @@
-- name: 
+- name: Michael Kenwick
+  image: /assets/images/michaelkenwick.jpg
+  bio: "Michael Kenwick is Assistant Professor of Political Science at Rutgers University."
+  website: https://mkenwick.com/
+
+- name: Katie McCabe
+  image: /assets/images/KatherineOgnyanova.jpg
+  bio: "Katie McCabe is an Assistant Professor at the School of Communication and Information at Rutgers University."
+  website: http://www.katherinetmccabe.com/
+  
+- name: Katya Ognyanova
+  image: /assets/images/KatherineOgnyanova.jpg
+  bio: "Katya Ognyanova is an Assistant Professor at the School of Communication and Information at Rutgers University."
+  website: https://kateto.net/
+
+- name: Andrey Tomashevskiy
+  image: /assets/images/andreyt.jpg
+  bio: "Andrey Tomashevskiy is Assistant Professor of Political Science at Rutgers University."
+  website: https://www.polisci.rutgers.edu/cb-profile/andreyt
