remove coming soon rutgers

--- a/_data/2021/rutgers/location.yml
+++ b/_data/2021/rutgers/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/rutgerslibrary.jpg
-title: Rutgers *Coming Soon*
+title: Rutgers
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: rutgers
