update rutgers faculty

--- a/_data/2021/rutgers/faculty.yml
+++ b/_data/2021/rutgers/faculty.yml
@@ -5,7 +5,7 @@
 
 - name: Katie McCabe
   image: /assets/images/katherineMcCabe.jpg
-  bio: "Katie McCabe is an Assistant Professor at the School of Communication and Information at Rutgers University."
+  bio: "Katie McCabe is an Assistant Professor of Political Science at Rutgers University."
   website: http://www.katherinetmccabe.com/
   
 - name: Katya Ognyanova
