--- a/_data/2021/rutgers/faculty.yml
+++ b/_data/2021/rutgers/faculty.yml
@@ -1,6 +1,6 @@
 - name: Michael Kenwick
   image: /assets/images/michaelkenwick.jpg
-  bio: "Michael Kenwick is Assistant Professor of Political Science at Rutgers University."
+  bio: "Michael Kenwick is an Assistant Professor of Political Science at Rutgers University."
   website: https://mkenwick.com/
 
 - name: Katie McCabe
@@ -15,5 +15,5 @@
 
 - name: Andrey Tomashevskiy
   image: /assets/images/andreyt.jpg
-  bio: "Andrey Tomashevskiy is Assistant Professor of Political Science at Rutgers University."
+  bio: "Andrey Tomashevskiy is an Assistant Professor of Political Science at Rutgers University."
   website: https://www.polisci.rutgers.edu/cb-profile/andreyt
