--- a/_data/2020/paris/location.yml
+++ b/_data/2020/paris/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/paris.jpg
-title: Paris [POSTPONED]
-subtitle: Plateau de Saclay, France
-description: ""
-link: paris
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/paris.jpg
+#title: Paris [POSTPONED]
+#subtitle: Plateau de Saclay, France
+#description: ""
+#link: paris
+#year: 2020
+#order: 99
+#apply_button: hidden
