update taipei site organizers

--- a/_data/2021/chengchi/faculty.yml
+++ b/_data/2021/chengchi/faculty.yml
@@ -1,1 +1,17 @@
-- name: 
+- name: Feng-Yi Liu
+  bio: "Feng-Yi Liu received his BA and MA degree in Social Welfare at National Chung Cheng University in Taiwan. 
+  He also completed a second MA at Columbia University in Mathematical Statistics. Now he is a Ph.D. candidate in 
+  the school of social work at Rutgers University, and a graduated statistician recognized by the American Statistics Association.
+  His broad research interests include immigrant family and child development, American immigration policy, and American child 
+  care policy. His dissertation thesis focuses on how family instability and child welfare interventions might influence 
+  child development among low-income immigrant children." 
+  image: /2019/hunter-nyc/images/Feng_yi.png
+  website: "https://www.linkedin.com/in/feng-yi-liu-4121597b/"
+
+- name: Robin Lee
+  bio: "Robin Lee is a PhD student in Sociology at Princeton University. 
+  Robin studies digital communication, social networks, and social movements. 
+  He was previously a senior data analyst at the New York Times where he did experimental design research on format messaging and best practices for reproducible data analysis.
+  He is the co-founder of Taiwanese Data Professionals."
+  image: /assets/images/RobinLee.jpg
+  website: "https://www.linkedin.com/in/robincrlee"
