--- a/_data/2021/chengchi/location.yml
+++ b/_data/2021/chengchi/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/chengchi.jpg
-title: Chengchi University *Coming Soon*
+title: Chengchi University, Taiwan
 subtitle: Virtual event
 description: "June 28 to July 9, 2021"
 link: chengchi
