--- a/_data/2021/hse/faculty.yml
+++ b/_data/2021/hse/faculty.yml
@@ -10,5 +10,5 @@
   
 - name: Ivan Smirnov
   image: /assets/images/IvanSmirnov.jpg
-  bio: "Ivan Smirnov is Head of the Computational Social Science Lab and Leading Research Fellow at Higher School of Economics. He employs data science to better understand human behavior and complex social phenomena. His main research focus is on inequality and well-being in the digital age."
+  bio: "Ivan Smirnov is a research fellow at the Chair for Computational Social Sciences and Humanities at RWTH Aachen University and scientific advisor of Laboratory for Computational Social Science at Higher School of Economics. He employs data science to better understand human behavior and complex social phenomena. His main research focus is on inequality and well-being in the digital age."
   website: https://twitter.com/ibsmirnov
