--- a/_data/2021/hse/hero.yml
+++ b/_data/2021/hse/hero.yml
@@ -1,2 +1,2 @@
 header_2: "June 14 to June 19, 2021 | Higher School of Economics | Virtual event"
-location: "SICSS-HSE *Coming Soon*"
+location: "SICSS-HSE"
