--- a/_data/2020/tucson/participants.yml
+++ b/_data/2020/tucson/participants.yml
@@ -81,7 +81,7 @@
   website: https://helenrkras.wixsite.com/portfolio
 
 - name: Jack Simons
-  image: /assets/images/jacksimons.jpeg
+  image: /assets/images/jacksimons.jpg
   bio: "Jack Simons, PhD, is an Assistant Professor in the School of Social and Behavioral Sciences at Mercy College in New York. His counseling lab is dedicated to scholarship on student and educator experiences, academic and career development, and health and wellness. He specializes in school counseling and LGBTQ topics and is an expert in counseling youth and emerging adults. His research on sexual and gender minority (SGM) topics aims to improve academic success and wellness among SGM people and other underrepresented minority groups. Dr. Simons’ research agenda is presently focused on: (1) stress, identity, and coping among transgender and gender non-binary individuals; (2) identity development and motivation among minority females in STEM; and (3) cultural competence among school counselors and other helping professionals."
   website: http://www.jacksimonsfoundation.org/
 
