--- a/_data/2021/tokyo/location.yml
+++ b/_data/2021/tokyo/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/tokyo2.jpg
-title: Tokyo *Coming Soon*
+title: Tokyo
 subtitle: Virtual event
 description: "July 12 to July 16, 2021"
 link: tokyo
