--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@
   url: "/people"
 - name: Festival
   url: "/2020/festival"
+- name: About
+  url: "/about"
 - name: Apply
   type: "button"
   url: "/apply"
