--- a/_data/2021/montreal/location.yml
+++ b/_data/2021/montreal/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/Montreal_photo.jpg
-title: Montréal *Coming Soon*
+title: Montréal
 subtitle: Virtual event
 description: "June 7 to June 25, 2021"
 link: montreal
