--- a/_data/founders.yml
+++ b/_data/founders.yml
@@ -1,6 +1,6 @@
 - name: Chris Bail
   image: /assets/images/chris2019.jpg
-  bio: "Chris Bail is Co-Founder of SICSS and Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and the Duke Population Research Institute. His research examines political polarization, culture and social psychology using tools from the  field of computational social science. He is the author of Terrified: How Anti-Muslim Fringe Organizations Became Mainstream."
+  bio: "Chris Bail is Co-Founder of SICSS and Professor of Sociology and Public Policy at Duke University where he directs the Polarization Lab. He is also affiliated with the Interdisciplinary Data Science Program, the Duke Network Analysis Center, and serves on the Advisory Council of the National Science Foundation's SBE Directorate. His research examines political polarization, culture and social psychology using tools from the  field of computational social science. He is the author of Breaking the Social Media Prism: How to Make our Platforms Less Polarizing."
   website: http://www.chrisbail.net/
 
 - name: Matthew Salganik
