--- a/_data/2021/bologna/location.yml
+++ b/_data/2021/bologna/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/bologna.jpg
-title: Bologna *Coming Soon*
+title: Bologna
 subtitle: Virtual event
 description: "June 21 to July 2, 2021"
 link: bologna
