--- a/_data/2021/bologna/hero.yml
+++ b/_data/2021/bologna/hero.yml
@@ -1,2 +1,2 @@
 header_2: "June 21 to July 2, 2021 | University of Bologna | Virtual event"
-location: "SICSS-Bologna *Coming Soon*"
+location: "SICSS-Bologna"
