removed "Coming Soon", no image change

--- a/_data/2021/oxford/location.yml
+++ b/_data/2021/oxford/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/oxford.jpg
-title: Oxford *Coming Soon*
+title: Oxford
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: oxford
