--- a/_data/2021/bologna/faculty.yml
+++ b/_data/2021/bologna/faculty.yml
@@ -1,1 +1,15 @@
-- name: 
+- name: Filippo Andreatta
+  bio: "Filippo Andreatta teaches International Politics and Strategic Studies at the University of Bologna, where he is currently chair of the Department of Political and Social Science."
+  website: https://www.unibo.it/sitoweb/filippo.andreatta2/en
+
+- name: Marco Albertini
+  bio: "Marco Albertini is Full Professor at the University of Bologna. His research interests focus on intergenerational relations; the consequences of separation and divorce; the comparative study of income inequality and social stratification; the consequences of childlessness; long-term care policies and ageing."
+  website: https://www.unibo.it/sitoweb/marco.albertini2/en
+
+- name: Matthew Loveless
+  bio: "Matthew Loveless is an Associate Professor in the Department of Political and Social Sciences at the University of Bologna. He investigates how individuals make sense of politics in Europe, focusing on public opinion, media use, and perceptions."
+  website: https://www.unibo.it/sitoweb/paulmatthew.loveless/en
+
+- name: Nicolò Cavalli
+  bio: "Nicolò Cavalli is an Assistant Professor at the Department of Social and Political Sciences at the Univeristy of Bocconi. He teaches Applications for Management and Computational Social Science."
+  website: http://didattica.unibocconi.it/docenti/cv.php?rif=180020
