--- a/_data/2020/nyu/location.yml
+++ b/_data/2020/nyu/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/nyu.jpg
-title: NYU [POSTPONED]
-subtitle: New York, New York
-description: ""
-link: nyu
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/nyu.jpg
+#title: NYU [POSTPONED]
+#subtitle: New York, New York
+#description: ""
+#link: nyu
+#year: 2020
+#order: 99
+#apply_button: hidden
