--- a/_data/2020/beijing/location.yml
+++ b/_data/2020/beijing/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/beijing.jpg
-title: Beijing [POSTPONED]
-subtitle: Beijing, China
-description: ""
-link: beijing
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/beijing.jpg
+#title: Beijing [POSTPONED]
+#subtitle: Beijing, China
+#description: ""
+#link: beijing
+#year: 2020
+#order: 99
+#apply_button: hidden
