--- a/_data/2020/chicago/location.yml
+++ b/_data/2020/chicago/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/chicago.jpg
-title: Chicago [POSTPONED]
-subtitle: Chicago, Illinois
-description: ""
-link: chicago
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/chicago.jpg
+#title: Chicago [POSTPONED]
+#subtitle: Chicago, Illinois
+#description: ""
+#link: chicago
+#year: 2020
+#order: 99
+#apply_button: hidden
