--- a/_data/2020/helsinki/location.yml
+++ b/_data/2020/helsinki/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/helsinki.jpg
-title: Helsinki [POSTPONED]
-subtitle: Helsinki, Finland
-description: ""
-link: helsinki
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/helsinki.jpg
+#title: Helsinki [POSTPONED]
+#subtitle: Helsinki, Finland
+#description: ""
+#link: helsinki
+#year: 2020
+#order: 99
+#apply_button: hidden
