--- a/_data/2020/hse/location.yml
+++ b/_data/2020/hse/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/moscow.jpg
-title: HSE University [POSTPONED]
-subtitle: Moscow, Russia
-description: ""
-link: hse
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/moscow.jpg
+#title: HSE University [POSTPONED]
+#subtitle: Moscow, Russia
+#description: ""
+#link: hse
+#year: 2020
+#order: 99
+#apply_button: hidden
