--- a/_data/2020/konstanz/location.yml
+++ b/_data/2020/konstanz/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/konstanz.jpg
-title: Konstanz [POSTPONED]
-subtitle: Konstanz, Germany
-description: ""
-link: konstanz
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/konstanz.jpg
+#title: Konstanz [POSTPONED]
+#subtitle: Konstanz, Germany
+#description: ""
+#link: konstanz
+#year: 2020
+#order: 99
+#apply_button: hidden
