--- a/_data/2020/milano/location.yml
+++ b/_data/2020/milano/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/milan.jpg
-title: Milano [POSTPONED]
-subtitle: Milan, Italy
-description: ""
-link: milano
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/milan.jpg
+#title: Milano [POSTPONED]
+#subtitle: Milan, Italy
+#description: ""
+#link: milano
+#year: 2020
+#order: 99
+#apply_button: hidden
