--- a/_data/2020/oxford/location.yml
+++ b/_data/2020/oxford/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/oxford.jpg
-title: Oxford [POSTPONED]
-subtitle: Oxford, England
-description: ""
-link: oxford
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/oxford.jpg
+#title: Oxford [POSTPONED]
+#subtitle: Oxford, England
+#description: ""
+#link: oxford
+#year: 2020
+#order: 99
+#apply_button: hidden
