--- a/_data/2020/tokyo/location.yml
+++ b/_data/2020/tokyo/location.yml
@@ -1,8 +1,8 @@
-image: /assets/images/tokyo2.jpg
-title: Tokyo [POSTPONED]
-subtitle: Yokohama, Japan
-description: ""
-link: tokyo
-year: 2020
-order: 99
-apply_button: hidden
+#image: /assets/images/tokyo2.jpg
+#title: Tokyo [POSTPONED]
+#subtitle: Yokohama, Japan
+#description: ""
+#link: tokyo
+#year: 2020
+#order: 99
+#apply_button: hidden
