--- a/_data/2021/helsinki/location.yml
+++ b/_data/2021/helsinki/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/helsinki.jpg
-title: Helsinki *Coming Soon*
+title: Helsinki
 subtitle: Virtual event
 description: "June 14 to June 25, 2021"
 link: helsinki
