[Stellenbosch] Remove coming-soon from location.yml

--- a/_data/2021/stellenbosch/location.yml
+++ b/_data/2021/stellenbosch/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/stellenbosch.jpg
-title: Stellenbosch *Coming Soon*
+title: Stellenbosch
 subtitle: Virtual event
 description: "June 28 to July 9, 2021"
 link: stellenbosch
