--- a/_data/2021/fgv-dapp-brazil/location.yml
+++ b/_data/2021/fgv-dapp-brazil/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/rio.jpg
-title: FGV/DAPP Brazil *Coming Soon*
+title: FGV/DAPP Brazil
 subtitle: Virtual event
 description: "June 14 to June 26, 2021"
 link: fgv-dapp-brazil
