--- a/_data/2021/fgv-dapp-brazil/faculty.yml
+++ b/_data/2021/fgv-dapp-brazil/faculty.yml
@@ -1,1 +1,15 @@
-- name: 
+- name: Tiago Ventura
+  image: /assets/images/tiagoVentura.jpg
+  bio: "Tiago Ventura is a Ph.D. Candidate in Government and Politics at the University of Maryland, College Park (UMD), and an alumni of SICSS Princeton in 2019. Tiago is a researcher on comparative politics and computational social science, with a particular focus on political violence in Latin America and political communication. During the Winter and Spring of 2021, He will be the Young Talent fellow in Computational Social Science at FGV Rio de Janeiro.  Tiago is also a researcher at the Interdisciplinary Laboratory for Computational Social Science at UMD. " 
+  website: http://tiagoventura.rbind.io/
+
+- name: Amaro Grassi
+  image: /assets/images/amarograssi.jpg
+  bio: "Amaro Grassi is a Ph.D. Candidate in Political Science at IESP-UERJ, and Chief Researcher at The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP))"
+  website: http://dapp.fgv.br/perfil/amaro-grassi/
+  
+- name: Marco Aurélio Ruediger
+  image: /assets/images/marcoruediger.jpg
+  bio: "Marco Ruediger is the Faculty Sponsor of SICSS FGV-DAPP Brazil, and the Director of The Department of Public Policy Analysis of Getulio Vargas Foundation (FGV/DAPP))"
+  website: 
+  
